--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.0.1
-pandas==1.3.3
-networkx==2.6.3
-matplotlib==3.4.3
-requests==2.26.0
+pandas==1.5
+networkx==2.7
+matplotlib==3.6
+requests==2.31
 gunicorn==20.1.0
-numpy==1.21.2
+numpy==1.24.1
 flask-cors==3.0.10 
+Werkzeug==2.2.2
